# AlgTekP1

./: README.md  app.py  optimointi.py  requirements.txt
KNN/: .coverage  .coveragerc  pyproject.toml
KNN/src/knn/: test_class.py
KNN/tests/: test_KNN.py
Palautukset/Kayttoohje/: requirements.txt
templates/: index.html
